src/objects/Meddpicc__c/Meddpicc__c.object-meta.xml
<CustomObject>
    <label>Meddpicc</label>
    <nameField>
        <label>Meddpicc Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mediic</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>