src/objects/Meddpicc__c/fields/DecisionCriteria__c.field-meta.xml
<CustomField>
    <fullName>DecisionCriteria__c</fullName>
    <label>DecisionCriteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>