src/objects/Meddpicc__c/fields/DecisionProcess__c.field-meta.xml
<CustomField>
    <fullName>DecisionProcess__c</fullName>
    <label>DecisionProcess</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>