src/objects/Meddpicc__c/fields/EconomicBuyer__c.field-meta.xml
<CustomField>
    <fullName>EconomicBuyer__c</fullName>
    <label>EconomicBuyer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>