src/objects/Meddpicc__c/fields/IdentifyPain__c.field-meta.xml
<CustomField>
    <fullName>IdentifyPain__c</fullName>
    <label>IdentifyPain</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>