src/objects/Meddpicc__c/fields/Meddpicc_Score__c.field-meta.xml
<CustomField>
    <fullName>Meddpicc_Score__c</fullName>
    <label>Meddpicc Score</label>
    <precision>13</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>