src/objects/Meddpicc__c/fields/Metrics__c.field-meta.xml
<CustomField>
    <fullName>Metrics__c</fullName>
    <label>Metrics</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>