src/objects/Meddpicc__c/fields/PaperProcess__c.field-meta.xml
<CustomField>
    <fullName>PaperProcess__c</fullName>
    <label>PaperProcess</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>